<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/fl_main"
        android:background="#f0f0f0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffc5c5c5"
        app:layout_constraintBottom_toTopOf="@+id/tab"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tab"
        android:layout_width="360dp"
        android:layout_height="47dp"
        android:background="#ffffff"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/me"
            android:layout_width="18dp"
            android:layout_height="19dp"
            android:layout_marginEnd="41dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="41dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/test"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/me_gray" />

        <ImageView
            android:id="@+id/test"
            android:layout_width="15dp"
            android:layout_height="19dp"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toEndOf="@+id/message"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/test_gray" />

        <ImageView
            android:id="@+id/home"
            android:layout_width="18dp"
            android:layout_height="19dp"
            android:layout_marginLeft="41dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/home_gray" />

        <ImageView
            android:id="@+id/message"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginLeft="69dp"
            android:layout_marginStart="69dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toEndOf="@+id/home"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/message_gray" />

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="24dp"
            android:layout_height="16dp"
            android:layout_marginLeft="38dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="21dp"
            android:text="@string/home"
            android:textColor="#777777"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/home" />

        <TextView
            android:id="@+id/tv_me"
            android:layout_width="24dp"
            android:layout_height="16dp"
            android:layout_marginLeft="299dp"
            android:layout_marginStart="299dp"
            android:layout_marginTop="21dp"
            android:text="@string/me"
            android:textColor="#777777"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/me" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="24dp"
            android:layout_height="22dp"
            android:layout_marginLeft="126dp"
            android:layout_marginStart="126dp"
            android:layout_marginTop="21dp"
            android:text="@string/meaasge"
            android:textColor="#777777"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/message" />

        <TextView
            android:id="@+id/tv_test"
            android:layout_width="24dp"
            android:layout_height="22dp"
            android:layout_marginLeft="212dp"
            android:layout_marginStart="212dp"
            android:layout_marginTop="21dp"
            android:text="@string/test"
            android:textColor="#777777"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/test" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>